@@ -234,8 +234,8 @@ class TestInvoker extends BaseInvoker implements ITestInvoker {
       int failureCount,
       ITestContext testContext) {
     FailureContext failure = new FailureContext();
-    failure.count = failureCount;
-    failure.representsRetriedMethod = true;
+    failure.count.set(failureCount);
+    failure.representsRetriedMethod.set(true);
     do {
       failure.instances = Lists.newArrayList();
       Object[] parameterValues = arguments.getParameterValues();
@@ -533,7 +533,7 @@ class TestInvoker extends BaseInvoker implements ITestInvoker {
     } else {
       testResult.setStatus(holder.status);
       if (holder.status == ITestResult.FAILURE && !holder.handled) {
-        int count = failure.count++;
+        int count = failure.count.getAndIncrement();
         if (testMethod.isDataDriven()) {
           count = 0;
         }
@@ -580,7 +580,7 @@ class TestInvoker extends BaseInvoker implements ITestInvoker {
     long startTime = System.currentTimeMillis();
     InvokedMethod invokedMethod = new InvokedMethod(startTime, testResult);
 
-    if (!failureContext.representsRetriedMethod
+    if (!failureContext.representsRetriedMethod.get()
         && invoker.hasConfigurationFailureFor(
             arguments.getTestMethod(),
             arguments.getTestMethod().getGroups(),
@@ -827,46 +827,50 @@ class TestInvoker extends BaseInvoker implements ITestInvoker {
     return result;
   }
 
+  private static final Object LOCK = new Object();
+
   private StatusHolder considerExceptions(
       ITestNGMethod tm,
       ITestResult testResult,
       ExpectedExceptionsHolder exceptionsHolder,
       FailureContext failure) {
-    StatusHolder holder = new StatusHolder();
-    int status = testResult.getStatus();
-    holder.handled = false;
+    synchronized (LOCK) {
+      StatusHolder holder = new StatusHolder();
+      int status = testResult.getStatus();
+      holder.handled = false;
 
-    Throwable ite = testResult.getThrowable();
-    if (status == ITestResult.FAILURE && ite != null) {
+      Throwable ite = testResult.getThrowable();
+      if (status == ITestResult.FAILURE && ite != null) {
 
-      //  Invocation caused an exception, see if the method was annotated with @ExpectedException
-      if (exceptionsHolder != null) {
-        if (exceptionsHolder.isExpectedException(ite)) {
-          testResult.setStatus(ITestResult.SUCCESS);
-          status = ITestResult.SUCCESS;
-        } else {
-          if (isSkipExceptionAndSkip(ite)) {
-            status = ITestResult.SKIP;
+        //  Invocation caused an exception, see if the method was annotated with @ExpectedException
+        if (exceptionsHolder != null) {
+          if (exceptionsHolder.isExpectedException(ite)) {
+            testResult.setStatus(ITestResult.SUCCESS);
+            status = ITestResult.SUCCESS;
           } else {
-            testResult.setThrowable(exceptionsHolder.wrongException(ite));
-            status = ITestResult.FAILURE;
+            if (isSkipExceptionAndSkip(ite)) {
+              status = ITestResult.SKIP;
+            } else {
+              testResult.setThrowable(exceptionsHolder.wrongException(ite));
+              status = ITestResult.FAILURE;
+            }
           }
+        } else {
+          handleException(ite, tm, testResult, failure.count.getAndIncrement());
+          holder.handled = true;
+          status = testResult.getStatus();
         }
-      } else {
-        handleException(ite, tm, testResult, failure.count++);
-        holder.handled = true;
-        status = testResult.getStatus();
+      } else if (status != ITestResult.SKIP && exceptionsHolder != null) {
+        TestException exception = exceptionsHolder.noException(tm);
+        if (exception != null) {
+          testResult.setThrowable(exception);
+          status = ITestResult.FAILURE;
+        }
       }
-    } else if (status != ITestResult.SKIP && exceptionsHolder != null) {
-      TestException exception = exceptionsHolder.noException(tm);
-      if (exception != null) {
-        testResult.setThrowable(exception);
-        status = ITestResult.FAILURE;
-      }
+      holder.originalStatus = testResult.getStatus();
+      holder.status = status;
+      return holder;
     }
-    holder.originalStatus = testResult.getStatus();
-    holder.status = status;
-    return holder;
   }
 
   private static void updateStatusHolderAccordingToTestResult(
